[package]
name = "api_tools"
version = "0.1.0"
authors = ["Christian de Botton <christian@vimeo.com>"]
edition = "2018"

[dependencies]
hyper = "0.12.19"
serde_json = "1.0.33"
base64 = "0.10.0"
dotenv_codegen = "0.11.0"
hyper-tls = "0.3.1"
tokio = {version = "0.1.13", features = ["async-await-preview"]}